opam-version: "2.0"
name: "caqti-driver-pgx"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: [
  "Petter A. Urkedal <paurkedal@gmail.com>"
]
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ocaml-caqti/"
doc: "https://paurkedal.github.io/ocaml-caqti/index.html"
bug-reports: "https://github.com/paurkedal/ocaml-caqti/issues"
depends: [
  "ocaml" {>= "4.08"}
  "caqti" {>= "2.1.0" & < "2.2.0~"}
  "domain-name"
  "dune" {>= "3.9"}
  "ipaddr"
  "pgx" {>= "2.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-caqti.git"
synopsis: "PostgreSQL driver for Caqti based on the pure-OCaml PGX library"
