opam-version: "2.0"
name: "caqti-driver-postgresql"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ocaml-caqti/"
doc: "http://paurkedal.github.io/ocaml-caqti/index.html"
bug-reports: "https://github.com/paurkedal/ocaml-caqti/issues"
depends: [
  "ocaml"
  "caqti" {>= "1.1.0" & < "1.2.0~"}
  "dune" {build}
  "postgresql"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-caqti.git"
synopsis: "PostgreSQL driver for Caqti based on C bindings"
