opam-version: "1.2"
name: "caqti-driver-sqlite3"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ocaml-caqti/"
bug-reports: "https://github.com/paurkedal/ocaml-caqti/issues"
dev-repo: "https://github.com/paurkedal/ocaml-caqti.git"
doc: "http://paurkedal.github.io/ocaml-caqti/index.html"

build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "caqti" {>= "1.0.0" & < "1.1.0~"}
  "dune" {build}
  "sqlite3"
]
