opam-version: "2.0"
name: "caqti-dynload"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
x-maintenance-intent: ["(latest)"]
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
homepage: "https://github.com/paurkedal/ocaml-caqti/"
doc: "https://paurkedal.github.io/ocaml-caqti/index.html"
bug-reports: "https://github.com/paurkedal/ocaml-caqti/issues"
depends: [
  "caqti" {>= "2.0.0" & < "3.0.0~"}
  "dune" {>= "3.9"}
  "ocaml"
  "ocamlfind"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-caqti.git"
synopsis: "Dynamic linking of Caqti drivers using findlib.dynload (deprecated)"
description: """
This package is deprecated, please use caqti.plugin instead.

This library registers a dynamic linker which will be called when
encoutering an unhandled database URI.  It tries to load a findlib package
named "caqti-driver-<scheme>" where "<scheme>" is the scheme of the URI,
which is expected register a driver for the scheme.

This is a separate package to avoid the dependency on the findlib.dynload
for architectures, like MirageOS, where dynamic linking may be unavailable.
The alternative is to link drivers directly into the application.
"""
