opam-version: "2.0"
name: "caqti-lwt"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
homepage: "https://github.com/paurkedal/ocaml-caqti/"
doc: "https://paurkedal.github.io/ocaml-caqti/index.html"
bug-reports: "https://github.com/paurkedal/ocaml-caqti/issues"
depends: [
  "caqti" {>= "2.1.0" & < "2.2.0~"}
  "dune" {>= "3.9"}
  "domain-name"
  "ipaddr"
  "logs"
  "mtime" {>= "2.0.0"}
  "lwt" {>= "5.3.0"}
  "ocaml"
  "alcotest" {with-test & >= "1.5.0"}
  "alcotest-lwt" {with-test & >= "1.5.0"}
  "cmdliner" {with-test & >= "1.1.0"}
  "caqti-driver-sqlite3" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-caqti.git"
synopsis: "Lwt support for Caqti"
