opam-version: "2.0"
name: "caqti-mirage"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
homepage: "https://github.com/paurkedal/ocaml-caqti/"
doc: "https://paurkedal.github.io/ocaml-caqti/index.html"
bug-reports: "https://github.com/paurkedal/ocaml-caqti/issues"
depends: [
  "caqti" {>= "2.1.0" & < "2.2.0~"}
  "caqti-lwt" {>= "2.1.0" & < "2.2.0~"}
  "caqti-tls" {>= "2.1.0" & < "2.2.0~"}
  "dns-client" {>= "7.0.0"}
  "dns-client-mirage" {>= "7.0.0"}
  "domain-name"
  "dune" {>= "3.9"}
  "ipaddr"
  "logs"
  "lwt" {>= "5.3.0"}
  "mirage-channel"
  "mirage-clock"
  "mirage-crypto-rng-mirage" {>= "1.0.0"}
  "mirage-time"
  "ocaml"
  "odoc" {with-doc}
  "tls"
  "tls-mirage" {>= "1.0.0"}
  "tcpip" {>= "8.1.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-caqti.git"
synopsis: "MirageOS support for Caqti including TLS"
