opam-version: "2.0"
name: "caqti-tls-async"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
homepage: "https://github.com/paurkedal/ocaml-caqti/"
doc: "https://paurkedal.github.io/ocaml-caqti/index.html"
bug-reports: "https://github.com/paurkedal/ocaml-caqti/issues"
depends: [
  "async_kernel" {>= "v0.11.0"}
  "async_unix" {>= "v0.11.0"}
  "caqti" {>= "2.1.0" & < "2.3.0~"}
  "caqti-async" {>= "2.1.0" & < "2.3.0~"}
  "dune" {>= "3.9"}
  "ocaml"
  "tls"
  "tls-async"
  "ppx_jane"
  "odoc" {with-doc}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-caqti.git"
synopsis: "TLS support for caqti-async"
