opam-version: "2.0"
name: "caqti-tls"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
homepage: "https://github.com/paurkedal/ocaml-caqti/"
doc: "https://paurkedal.github.io/ocaml-caqti/index.html"
bug-reports: "https://github.com/paurkedal/ocaml-caqti/issues"
depends: [
  "caqti" {>= "2.1.0" & < "2.2.0~"}
  "dune" {>= "3.9"}
  "ocaml"
  "odoc" {with-doc}
  "tls" {>= "1.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-caqti.git"
synopsis: "Caqti TLS support for PGX; config and caqti.unix implementation"
description: """
This package contains the shared configuration and caqti.unix-specific
implementation of TLS for the Caqti network API.  This package only applies
to PGX, since drivers based on bindings use their own TLS implementation
(libpq, mariadb) or have no need for it (sqlite3).

The implementation for caqti-eio and caqti-lwt can be found in caqti-tls-eio
and caqti-tls-lwt, respectively.
"""
