opam-version: "1.2"
name: "caqti-type-calendar"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
homepage: "https://github.com/paurkedal/ocaml-caqti/"
bug-reports: "https://github.com/paurkedal/ocaml-caqti/issues"
dev-repo: "https://github.com/paurkedal/ocaml-caqti.git"
license: "LGPL-3 with OCaml linking exception"

build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "caqti"
  "calendar"
  "dune"
]
