opam-version: "1.2"
name: "caqti"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
homepage: "https://github.com/paurkedal/ocaml-caqti/"
bug-reports: "https://github.com/paurkedal/ocaml-caqti/issues"
dev-repo: "https://github.com/paurkedal/ocaml-caqti.git"
license: "LGPL-3 with OCaml linking exception"

build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "dune"
  "logs"
  "ocamlfind" {build}
  "ptime"
  "uri" {>= "1.9.0"}
]
available: [ocaml-version >= "4.04.0"]
