(executable
 (name bikereg)
 (modules bikereg)
 (libraries caqti caqti-dynload caqti-lwt testlib))

(rule
 (alias runtest)
 (package caqti-lwt)
 (deps (:test bikereg.exe) (alias ../testsuite/drivers) ../testsuite/uris.conf)
 (locks /db/bikereg)
 (action
  (setenv OCAMLPATH ../testsuite
   (run %{test} -U ../testsuite/uris.conf))))
