(executable
 (name bikereg)
 (modules bikereg)
 (libraries caqti caqti-dynload caqti-lwt caqti-lwt.unix testlib))

(rule
 (alias runtest)
 (package caqti-lwt)
 (deps
    (:test bikereg.exe)
    (:u %{env:CAQTI_TEST_URIS_FILE=../testsuite/uris.conf})
    (include ../testsuite/dune.uri-deps-lwt)
    (env_var CAQTI_TEST_X509_AUTHENTICATOR))
 (locks /db/bikereg)
 (action (run %{test} -U %{u})))
