(library
  (name caqti)
  (public_name caqti)
  (wrapped false)
  (modules
    Caqti_connect
    Caqti_connect_sig
    Caqti_connection_sig
    Caqti_driver_lib
    Caqti_driver_info
    Caqti_error
    Caqti_driver_sig
    Caqti_driver_info
    Caqti_mult
    Caqti_pool
    Caqti_pool_sig
    Caqti_query
    Caqti_request
    Caqti_response_sig
    Caqti_sql
    Caqti_sql_io
    Caqti_stream
    Caqti_type
    Caqti_type_sig
    ; internal
    Caqti_heap
    Caqti_prereq)
  (modules_without_implementation
    Caqti_connect_sig
    Caqti_connection_sig
    Caqti_response_sig
    Caqti_driver_sig
    Caqti_pool_sig
    Caqti_type_sig)
  (library_flags (:standard -linkall))
  (libraries logs ptime uri)
  (preprocess (pps ppx_deriving.eq)))
