(library
  (name testkit)
  (modules Testkit Testkit_sig)
  (wrapped false)
  (libraries alcotest caqti dynlink logs uri))

; Tests Using DBs

(rule
  (targets uris.conf)
  (mode fallback)
  (action (write-file %{targets} "sqlite3:test.db?busy_timeout=60000\n")))

(test
  (name bikereg)
  (package caqti-lwt)
  (modules Bikereg)
  (libraries caqti caqti-dynload caqti-lwt testkit)
  (deps (alias drivers) uris.conf)
  (locks /db/bikereg)
  (action (setenv OCAMLPATH . (run %{test}))))

(library
  (name test_sql)
  (wrapped false)
  (modules Test_sql)
  (libraries caqti ptime.clock.os testkit))

(test
  (name test_sql_blocking)
  (package caqti-dynload)
  (modules Test_sql_blocking)
  (libraries alcotest caqti caqti.blocking caqti-dynload testkit test_sql)
  (deps (alias drivers) uris.conf)
  (locks /db/test_sql)
  (action (setenv OCAMLPATH . (run %{test}))))

(test
  (name test_sql_async)
  (package caqti-async)
  (modules Test_sql_async)
  (libraries alcotest-async caqti caqti-dynload caqti-async testkit test_sql)
  (deps (alias drivers) uris.conf)
  (locks /db/test_sql)
  (action (setenv OCAMLPATH . (run %{test}))))

(test
  (name test_sql_lwt)
  (package caqti-lwt)
  (modules Test_sql_lwt Test_parallel_lwt Test_param)
  (libraries alcotest-lwt caqti caqti-dynload caqti-lwt testkit test_sql)
  (deps (alias drivers) uris.conf)
  (locks /db/test_sql)
  (action (setenv OCAMLPATH . (run %{test}))))

; Fake META Files - used for dynamic linking of drivers

(alias (name drivers))

(alias
  (name drivers)
  (package caqti)
  (deps
    META.caqti
    %{cma:../caqti/lib/caqti}
    ../caqti/lib/caqti.cmxs))
(rule
  (targets META.caqti)
  (deps (:first-dep ../META.caqti))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../caqti/lib\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-mariadb)
  (deps
    (:first-dep META.caqti-driver-mariadb)
    %{cma:../caqti-driver-mariadb/lib/caqti_driver_mariadb}
    ../caqti-driver-mariadb/lib/caqti_driver_mariadb.cmxs))
(rule
  (targets META.caqti-driver-mariadb)
  (deps (:first-dep ../META.caqti-driver-mariadb))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../caqti-driver-mariadb/lib\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-sqlite3)
  (deps
    META.caqti-driver-sqlite3
    %{cma:../caqti-driver-sqlite3/lib/caqti_driver_sqlite3}
    ../caqti-driver-sqlite3/lib/caqti_driver_sqlite3.cmxs))
(rule
  (targets META.caqti-driver-sqlite3)
  (deps (:first-dep ../META.caqti-driver-sqlite3))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../caqti-driver-sqlite3/lib\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-postgresql)
  (deps
    META.caqti-driver-postgresql
    %{cma:../caqti-driver-postgresql/lib/caqti_driver_postgresql}
    ../caqti-driver-postgresql/lib/caqti_driver_postgresql.cmxs))
(rule
  (targets META.caqti-driver-postgresql)
  (deps (:first-dep ../META.caqti-driver-postgresql))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../caqti-driver-postgresql/lib\"\n")
      (cat %{first-dep})))))
