(library
  (name testkit)
  (modules Testkit)
  (wrapped false)
  (libraries dynlink uri))

; Basic Tests

(alias (name runtest) (deps (:first-dep test_heap.exe)) (action (run %{first-dep})))
(executable
  (name test_heap)
  (modules Test_heap)
  (libraries caqti testkit))

(alias
  (name runtest)
  (package caqti-lwt)
  (deps (:first-dep test_pool_lwt.exe))
  (action (run %{first-dep})))
(executable
  (name test_pool_lwt)
  (modules Test_pool_lwt)
  (libraries caqti-lwt testkit))

; Tests Using DBs

(rule
  (targets uris.conf)
  (mode fallback)
  (action (write-file %{targets} "sqlite3::memory:\n")))

(alias
  (name runtest)
  (package caqti-lwt)
  (deps (:first-dep bikereg.exe) (alias drivers) uris.conf)
  (locks /db/bikereg)
  (action (setenv OCAMLPATH . (run %{first-dep}))))
(executable
  (name bikereg)
  (modules Bikereg)
  (libraries caqti caqti-dynload caqti-lwt testkit))

(library
  (name test_sql)
  (wrapped false)
  (modules Test_sql)
  (libraries caqti ptime.clock.os))

(alias
  (name runtest)
  (package caqti-async)
  (deps (:first-dep test_sql_async.exe) (alias drivers) uris.conf)
  (locks /db/test_sql)
  (action (setenv OCAMLPATH . (run %{first-dep}))))
(executable
  (name test_sql_async)
  (modules Test_sql_async)
  (libraries caqti caqti-dynload caqti-async testkit test_sql))

(alias
  (name runtest)
  (package caqti-lwt)
  (deps (:first-dep test_parallel_lwt.exe) (alias drivers) uris.conf)
  (locks /db/test_parallel_lwt)
  (action (setenv OCAMLPATH . (run %{first-dep}))))
(executable
  (name test_parallel_lwt)
  (modules Test_parallel_lwt)
  (libraries caqti caqti-dynload caqti-lwt testkit))

(alias
  (name runtest)
  (package caqti-lwt)
  (deps (:first-dep test_sql_lwt.exe) (alias drivers) uris.conf)
  (locks /db/test_sql)
  (action (setenv OCAMLPATH . (run %{first-dep}))))
(executable
  (name test_sql_lwt)
  (modules Test_sql_lwt)
  (libraries caqti caqti-dynload caqti-lwt testkit test_sql))

(alias
  (name runtest)
  (package caqti-lwt)
  (deps (:first-dep test_param.exe) (alias drivers) uris.conf)
  (action (setenv OCAMLPATH . (run %{first-dep}))))
(executable
  (name test_param)
  (modules Test_param)
  (libraries caqti caqti-dynload caqti-lwt testkit))

; Fake META Files

(alias (name drivers))

(alias
  (name drivers)
  (package caqti)
  (deps META.caqti ../lib/caqti.cma ../lib/caqti.cmxs))
(rule
  (targets META.caqti)
  (deps (:first-dep ../META.caqti))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../lib\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-mariadb)
  (deps
    (:first-dep META.caqti-driver-mariadb)
    ../lib-driver/caqti_driver_mariadb.cma
    ../lib-driver/caqti_driver_mariadb.cmxs))
(rule
  (targets META.caqti-driver-mariadb)
  (deps (:first-dep ../META.caqti-driver-mariadb))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../lib-driver\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-sqlite3)
  (deps
    META.caqti-driver-sqlite3
    ../lib-driver/caqti_driver_sqlite3.cma
    ../lib-driver/caqti_driver_sqlite3.cmxs))
(rule
  (targets META.caqti-driver-sqlite3)
  (deps (:first-dep ../META.caqti-driver-sqlite3))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../lib-driver\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-postgresql)
  (deps
    META.caqti-driver-postgresql
    ../lib-driver/caqti_driver_postgresql.cma
    ../lib-driver/caqti_driver_postgresql.cmxs))
(rule
  (targets META.caqti-driver-postgresql)
  (deps (:first-dep ../META.caqti-driver-postgresql))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../lib-driver\"\n")
      (cat %{first-dep})))))
