(library
  (name testkit)
  (modules Testkit)
  (wrapped false)
  (libraries dynlink uri))

; Basic Tests

(test
  (name test_heap)
  (package caqti)
  (modules Test_heap)
  (libraries caqti testkit))

(test
  (name test_pool_lwt)
  (package caqti-lwt)
  (modules Test_pool_lwt)
  (libraries caqti-lwt testkit))

; Tests Using DBs

(rule
  (targets uris.conf)
  (mode fallback)
  (action (write-file %{targets} "sqlite3::memory:\n")))

(test
  (name bikereg)
  (package caqti-lwt)
  (modules Bikereg)
  (libraries caqti caqti-dynload caqti-lwt testkit)
  (deps (alias drivers) uris.conf)
  (locks /db/bikereg)
  (action (setenv OCAMLPATH . (run %{test}))))

(library
  (name test_sql)
  (wrapped false)
  (modules Test_sql)
  (libraries caqti ptime.clock.os))

(test
  (name test_sql_blocking)
  (package caqti-dynload)
  (modules Test_sql_blocking)
  (libraries caqti caqti.blocking caqti-dynload testkit test_sql)
  (deps (alias drivers) uris.conf)
  (locks /db/test_sql)
  (action (setenv OCAMLPATH . (run %{test}))))

(test
  (name test_sql_async)
  (package caqti-async)
  (modules Test_sql_async)
  (libraries caqti caqti-dynload caqti-async testkit test_sql)
  (deps (alias drivers) uris.conf)
  (locks /db/test_sql)
  (action (setenv OCAMLPATH . (run %{test}))))

(test
  (name test_parallel_lwt)
  (package caqti-lwt)
  (modules Test_parallel_lwt)
  (libraries caqti caqti-dynload caqti-lwt testkit)
  (deps (alias drivers) uris.conf)
  (locks /db/test_parallel_lwt)
  (action (setenv OCAMLPATH . (run %{test}))))

(test
  (name test_sql_lwt)
  (package caqti-lwt)
  (modules Test_sql_lwt)
  (libraries caqti caqti-dynload caqti-lwt testkit test_sql)
  (deps (alias drivers) uris.conf)
  (locks /db/test_sql)
  (action (setenv OCAMLPATH . (run %{test}))))

(test
  (name test_param)
  (package caqti-lwt)
  (modules Test_param)
  (libraries caqti caqti-dynload caqti-lwt testkit)
  (deps (alias drivers) uris.conf)
  (action (setenv OCAMLPATH . (run %{test}))))

; Fake META Files - used for dynamic linking of drivers

(alias (name drivers))

(alias
  (name drivers)
  (package caqti)
  (deps META.caqti ../lib/caqti.cma ../lib/caqti.cmxs))
(rule
  (targets META.caqti)
  (deps (:first-dep ../META.caqti))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../lib\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-mariadb)
  (deps
    (:first-dep META.caqti-driver-mariadb)
    ../lib-driver/caqti_driver_mariadb.cma
    ../lib-driver/caqti_driver_mariadb.cmxs))
(rule
  (targets META.caqti-driver-mariadb)
  (deps (:first-dep ../META.caqti-driver-mariadb))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../lib-driver\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-sqlite3)
  (deps
    META.caqti-driver-sqlite3
    ../lib-driver/caqti_driver_sqlite3.cma
    ../lib-driver/caqti_driver_sqlite3.cmxs))
(rule
  (targets META.caqti-driver-sqlite3)
  (deps (:first-dep ../META.caqti-driver-sqlite3))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../lib-driver\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-postgresql)
  (deps
    META.caqti-driver-postgresql
    ../lib-driver/caqti_driver_postgresql.cma
    ../lib-driver/caqti_driver_postgresql.cmxs))
(rule
  (targets META.caqti-driver-postgresql)
  (deps (:first-dep ../META.caqti-driver-postgresql))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../lib-driver\"\n")
      (cat %{first-dep})))))
